<resources>
    <string name="app_name">Covid 19</string>
    <string name="egypt">Egypt</string>
    <string name="cases">Cases:</string>
    <string name="today_cases">Today Cases:</string>
    <string name="death">Death:</string>
    <string name="today_death">Today Death:</string>
    <string name="recovered">Recovered:</string>
    <string name="worldwide">WorldWide</string>
    <string name="all_countries">All Countries</string>
    <string name="covid_19">Covid-19</string>
    <string name="symptoms">Symptoms</string>
    <string name="updates">Updates</string>
    <string name="helpline">Helpline</string>
    <string name="about">About</string>
    <string name="to_prevent_infection_and_to_slow_transmission_of_covid_19_do_the_following_n_n_1_wash_your_hands_regularly_with_soap_and_water_or_clean_them_with_alcohol_based_hand_rub_n_n2_maintain_at_least_1_metre_distance_between_you_and_people_coughing_or_sneezing_n_n3_avoid_touching_your_face_n_n4_cover_your_mouth_and_nose_when_coughing_or_sneezing_n_n5_stay_home_if_you_feel_unwell_n_n6_refrain_from_smoking_and_other_activities_that_weaken_the_lungs_n_n7_practice_physical_distancing_by_avoiding_unnecessary_travel_and_staying_away_from_large_groups_of_people">To prevent infection and to slow transmission of COVID-19, do the following:   1. Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.  2. Maintain at least 1 metre distance between you and people coughing or sneezing.  3. Avoid touching your face.  4. Cover your mouth and nose when coughing or sneezing.  5. Stay home if you feel unwell.  6. Refrain from smoking and other activities that weaken the lungs.  7. Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.</string>
    <string name="coronavirus_disease_covid_19_is_an_infectious_disease_caused_by_a_newly_discovered_coronavirus_n_n_most_people_infected_with_the_covid_19_virus_will_experience_mild_to_moderate_respiratory_illness_and_recover_without_requiring_special_treatment_older_people_and_those_with_underlying_medical_problems_like_cardiovascular_disease_diabetes_chronic_respiratory_disease_and_cancer_are_more_likely_to_develop_serious_illness_n_nthe_best_way_to_prevent_and_slow_down_transmission_is_be_well_informed_about_the_covid_19_virus_the_disease_it_causes_and_how_it_spreads_protect_yourself_and_others_from_infection_by_washing_your_hands_or_using_an_alcohol_based_rub_frequently_and_not_touching_your_face_n_nthe_covid_19_virus_spreads_primarily_through_droplets_of_saliva_or_discharge_from_the_nose_when_an_infected_person_coughs_or_sneezes_so_it_s_important_that_you_also_practice_respiratory_etiquette_for_example_by_coughing_into_a_flexed_elbow_n_nat_this_time_there_are_no_specific_vaccines_or_treatments_for_covid_19_however_there_are_many_ongoing_clinical_trials_evaluating_potential_treatments_who_will_continue_to_provide_updated_information_as_soon_as_clinical_findings_become_available">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.   Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment. Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.  The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.  The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).  At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.</string>
    <string name="the_covid_19_virus_affects_different_people_in_different_ways_covid_19_is_a_respiratory_disease_and_most_infected_people_will_develop_mild_to_moderate_symptoms_and_recover_without_requiring_special_treatment_people_who_have_underlying_medical_conditions_and_those_over_60_years_old_have_a_higher_risk_of_developing_severe_disease_and_death_n_ncommon_symptoms_include_n_n1_fever_n_n2_tiredness_n_n3_dry_cough_n_n_other_symptoms_include_n_n4_shortness_of_breath_n_n5_aches_and_pains_n_n6_sore_throat_n_n_7_and_very_few_people_will_report_diarrhoea_nausea_or_a_runny_nose_n_npeople_with_mild_symptoms_who_are_otherwise_healthy_should_self_isolate_and_contact_their_medical_provider_or_a_covid_19_information_line_for_advice_on_testing_and_referral_n_n_people_with_fever_cough_or_difficulty_breathing_should_call_their_doctor_and_seek_medical_attention">The COVID-19 virus affects different people in different ways. COVID-19 is a respiratory disease and most infected people will develop mild to moderate symptoms and recover without requiring special treatment. People who have underlying medical conditions and those over 60 years old have a higher risk of developing severe disease and death.  Common symptoms include:  1. fever  2. tiredness  3. dry cough.   Other symptoms include:  4. shortness of breath  5. aches and pains  6. sore throat   7. and very few people will report diarrhoea, nausea or a runny nose.  People with mild symptoms who are otherwise healthy should self-isolate and contact their medical provider or a COVID-19 information line for advice on testing and referral.   People with fever, cough or difficulty breathing should call their doctor and seek medical attention.</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="load">Loading Data…</string>
    <string name="fetching">Fetching Data…</string>
    <string name="overview">Overview</string>
    <string name="prevention">Prevention</string>
    <string name="error">Error!</string>
    <string name="checkyour">Check Your Internet Connection.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
</resources>
